<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insta-Pay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="item_type">Item Type</string>
    <string name="date">Date</string>
    <string name="chicken">Chicken</string>
    <string name="sheep">Sheep</string>
    <string name="noofbags">No of  bags</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="rate_per_bag">Rate per Bag</string>
    <string name="tot_amt">Total amt.</string>
    <string name="rem_amt">Balance</string>
    <string name="paid_amt">Paid amt.</string>
     <string name="btn_stk_lbl">Stock Entry</string>
      <string name="btn_sls_lbl">Sales Entry</string>
       <string name="btn_stk_det_lbl">Stock Details</string>
        <string name="btn_sls_det_lbl">Sales Details</string>
        <string name="bill_lbl">Bill</string>
        <string name="btn_go_det_lbl">Godwn detail</string>
        <string name="btn_pen_det_lbl">Pending Pay</string>
        <string name="btn_show_pay_lbl">Payment details</string>
        <string name="btn_update_pay_lbl">Update Payment</string>
        <string name="hint_edt">Enter ID/Bill no.</string>
        <string name="btn_id_ok_lbl">OK</string>
        <string name="hint_amt">Enter the amount</string>
        <string name="btn_amt_ok_lbl">Update</string>
        <string name="bill">Bill Details</string>
        <string name="str_det">TAMT-Total Amount 
            					PAMT-Paid Amount
            					</string>
        <string name="tot_bal">Total Balance</string>
        <string name="paid_tot">Total Payment</string>
        <string name="bill_tot">Total Bill Amount</string>
        <string name="hint_rate">Enter new price</string>
        <string name="btn_up_lbl">Update Price</string>
        <string name="exit_lbl">Get Report</string>
        <string name="bill_name">Bill</string>
        <string name="stk_name">Stock Entry</string>
        <string name="stkdet_name">Stock Details</string>
        <string name="sales_name">Sales Entry</string>
        <string name="penddet_name">Pending Details</string>
        <string name="salesdet_name">Sales Details</string>
        <string name="spl_name">Paid amt. details</string>
        <string name="uppmt_name">Update Payement</string>
        <string name="upprice_name">Update Price</string>

</resources>
