<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textVidss"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_type" />

    <RadioGroup
        android:id="@+id/r_update_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <RadioButton
            android:id="@+id/radio_chicken_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken" />

        <RadioButton
            android:id="@+id/radio_sheep_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheep" />
    </RadioGroup>

    <EditText
        android:id="@+id/edt_update_rate"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/txtrect"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_rate"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_update_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/redbtn"
        style="@style/btn_style"
        android:layout_margin="20dp"
        
        android:text="@string/btn_amt_ok_lbl" />

</LinearLayout>